--- a/_posts/2020-3-05-理解类加载的双亲委派模型.md
+++ b/_posts/2020-3-05-理解类加载的双亲委派模型.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      理解类加载的双亲委派模型
-subtitle:   类加载中双亲委派原理
+subtitle:   双亲委派含义
 date:       2020-03-05
 author:     gaopq
 header-img: img/post-bg-debug.png
@@ -15,24 +15,19 @@ tags:
 #### 类加载器
 - 启动类加载器 BootstrapClassLoader
 - 扩展类加载器 ExtensionClassLoader
-- 系统类加载器(应用程序类加载器) SystemClassLoader
+- 系统类加载器(应用程序类加载器) AppClassLoader
 
-	$ brew install tree
-
-#### 使用
-- 直接使用 `tree` 命令，会在当前文件目录下，递归输出所有文件层级
+#### Java API doc 表述
+The Java platform uses a delegation model for loading classes. The basic idea is that every class loader has a "parent" class loader. When loading a class, a class loader first "delegates" the search for the class to its parent class loader before attempting to find the class itself.
 	
-		$ tree
-
-- 限制层级
-
-		$ tree -L 2
-
-- 指定当前目录下的某个文件夹
-
-		$ tree Desktop
-	
-#### 导出文件  
-用`> 文件名.格式` 的形式导出
-
-	$ tree -L 1 > tree.md
+#### 思考理解  
+- 只有当父加载器在自己搜索范围内找不到特定的类时(即ClassNotFoundException), 子加载器才会尝试自己去加载
+- 双亲委派中的"双"并不特指父亲母亲, 而是泛指父辈, 即父类加载器(是不是叫父类/基类委派更贴切?或者干脆叫啃老委派?)
+- 设计缘由: 
+    - 避免类的重复加载, Java类随着它的类加载器一起具备了一种带有优先级的层次关系, 对于已被父加载器加载过的类, 子加载器没必要重新加载一次
+    - 安全性, 最基础的类一定是由最上层的类加载器实现加载的, 不允许用户使用自定义加载器在加载基础类的时候扩展自定义的操作
+- 破坏双亲委派模型
+    - SPI(Service Provider Interface) 接口是Java核心库的一部分, 是由启动类加载器来加载的, 提供"为某个接口寻找服务实现的机制"
+    - 而SPI的实现是由各供应厂商来完成, 实现类是由系统类加载器来加载的, 按双亲委派模型, 启动类加载器无法委派系统类加载器去加载类
+    - 线程上下文类加载器(Context class loader, JDK1.2), Java应用的线程上下文加载器默认就是系统类加载器AppClassLoader, 可通过 Thread 的 setContextClassLoader 方法设置线程的上下文类加载器
+    - 案例: JDBC驱动注册
