volatile 可能从CPU缓存读,不一定直接读物理内存

--- a/_posts/2020-3-13-java线程工作内存刷新时机.md
+++ b/_posts/2020-3-13-java线程工作内存刷新时机.md
@@ -72,11 +72,13 @@ In essence, releasing a lock forces a flush of all writes from working memory em
 #### 思考理解  
 - 线程释放一个锁的时候将当前线程工作内存中发生的所有写操作刷新到主内存中
 - 线程获取一个锁的时候会对当前线程所有可访问到的值从主内存同步到工作内存中
-- 使用 volatile 修饰的变量，每次修改都会立即同步到主内存，每次读都直接从主内存中读取
+- 使用 volatile 修饰的变量，每次修改都会立即同步到主内存，每次读如果发现变量值有变更(依据CPU MESI等一致性协议)，则直接从主内存中读取
 - 当一个线程终止时，所有写入的操作都被刷新到主内存中
     
 #### 资料参考
 - 《Concurrent Programming in Java》
 - 《深入理解Java虚拟机：JVM高级特性与最佳实践（第2版）》
 - [线程的缓存何时刷新？](https://juejin.im/post/5c28d01ef265da61616ec8a5)
+- [正确使用 Volatile 变量](https://www.ibm.com/developerworks/cn/java/j-jtp06197.html)
 - [Java 并发：volatile 关键字解析](https://blog.csdn.net/justloveyou_/article/details/53672005)
+- [从CPU Cache出发彻底弄懂volatile/synchronized/cas机制](https://juejin.im/post/5c6b99e66fb9a049d51a1094)
