feat: 参考资料补充

--- a/_posts/2020-3-05-理解类加载的双亲委派模型.md
+++ b/_posts/2020-3-05-理解类加载的双亲委派模型.md
@@ -22,12 +22,23 @@ The Java platform uses a delegation model for loading classes. The basic idea is
 	
 #### 思考理解  
 - 只有当父加载器在自己搜索范围内找不到特定的类时(即ClassNotFoundException), 子加载器才会尝试自己去加载
+
 - 双亲委派中的"双"并不特指父亲母亲, 而是泛指父辈, 即父类加载器(是不是叫父类/基类委派更贴切?或者干脆叫啃老委派?)
+
 - 设计缘由: 
     - 避免类的重复加载, Java类随着它的类加载器一起具备了一种带有优先级的层次关系, 对于已被父加载器加载过的类, 子加载器没必要重新加载一次
+    
     - 安全性, 最基础的类一定是由最上层的类加载器实现加载的, 不允许用户使用自定义加载器在加载基础类的时候扩展自定义的操作
+    
 - 破坏双亲委派模型
     - SPI(Service Provider Interface) 接口是Java核心库的一部分, 是由启动类加载器来加载的, 提供"为某个接口寻找服务实现的机制"
+    
     - 而SPI的实现是由各供应厂商来完成, 实现类是由系统类加载器来加载的, 按双亲委派模型, 启动类加载器无法委派系统类加载器去加载类
+    
     - 线程上下文类加载器(Context class loader, JDK1.2), Java应用的线程上下文加载器默认就是系统类加载器AppClassLoader, 可通过 Thread 的 setContextClassLoader 方法设置线程的上下文类加载器
+    
     - 案例: JDBC驱动注册
+
+#### 资料参考
+- 《深入理解Java虚拟机：JVM高级特性与最佳实践（第2版）》
+- [深入理解Java类加载器(一)：Java类加载原理解析](https://blog.csdn.net/justloveyou_/article/details/72217806)
