feat: MongoDB3.4复制集配置

--- a/_posts/2021-3-10-一些个人感悟和理解.md
+++ b/_posts/2021-3-10-一些个人感悟和理解.md
@@ -4,7 +4,7 @@ title:      一些个人感悟和理解
 subtitle:   人应该活得简单一点
 date:       2021-03-10
 author:     高强
-header-img: img/post-bg-YesOrNo.jpg
+header-img: img/post-bg-2015.jpg
 catalog: true
 tags:
     - 思考感悟
