--- a/_posts/2019-11-03-《黑客与画家》读书笔记.md
+++ b/_posts/2019-11-03-《黑客与画家》读书笔记.md
@@ -20,7 +20,7 @@ tags:
 * 收集反馈
 * 调整产品
 * 成长壮大
-
+---
 3. 黑客行为必须包含三个特点：好玩、高智商、探索精神。 —— 鲁迅
 
 
@@ -41,7 +41,7 @@ tags:
 
 9. 大多数成年人故意让孩子对世界有一个错误的认识。（例：不在孩子面前讲粗口，孩子学到了粗口以后也不在大人面前讲，互相伪装，可笑而无奈的结论）
 
-
+---
 10. 想要做出优秀作品，你需要一个什么问题都能思考的大脑。尤其是那些似乎不应该思考的问题，你的大脑也要养成思考它们的习惯。（似乎不应思考的问题：最简单最显而易见的，如1＋1为什么等于2）
 
 
@@ -54,7 +54,11 @@ tags:
 13. 创造有价值的东西就是创造财富。你最好先搞清楚什么是财富。财富与金钱并不是同义词。
 
 
-14. “我想提出一种相反的观点：现代社会的收入差距扩大是一种健康的信号。技术使得生产率的差异加速扩大，如果这种扩大没有反映在收入上面，只有三种可能的解释：（a）技术革新停顿了；（b）那些创造大部分财富的人停止工作了；（c）创造财富的人没有获得报酬”
+14. “我想提出一种相反的观点：现代社会的收入差距扩大是一种健康的信号。技术使得生产率的差异加速扩大，如果这种扩大没有反映在收入上面，只有三种可能的解释：
+    
+- 技术革新停顿了 
+- 那些创造大部分财富的人停止工作了
+- 创造财富的人没有获得报酬”
 
 
 15. “但是，只要你压制收入差距的扩大，不管是用偷窃私人财产的做法（封建社会），还是用高额税收的做法（某些现代政府），最终结果看来都是一样的，那就是社会作为一个整体变得更贫穷了。”
@@ -62,6 +66,6 @@ tags:
 
 16. 黑客（hacker）和入侵者（cracker）经常被混为一谈也有其道理，一名纯粹的黑客，其成长过程必不可少会用到“入侵”技能，先不论入侵的对象和目标，这种行为对于被入侵者来说就符合cracker的身份。另外，一名纯粹的黑客，就算只是追求自由，希望打破壁垒，那他的“入侵”行为可以说是只是进去看看，说明我来过？这跟“我就蹭蹭，不进去”有啥区别。
 
-
+---
 17. 作者的阅历贼丰富，各种素材、引用信手拈来，厉害啊厉害！有空研究一下 Lisp 吧😆
 
