--- a/_posts/2020-9-17-《自卑与超越》读书笔记.md
+++ b/_posts/2020-9-17-《自卑与超越》读书笔记.md
@@ -11,7 +11,11 @@ tags:
     - 读书笔记
 ---
 
-1. 构成我们生活的现实，并且制约着我们的三个事实：由于我们是在这个被称为“地球”的贫瘠星球上生活，因此，我们是无法脱离它的；在地球上，我们并不是人类种族的唯一成员，与我们同在的还有其他人，我们在有生之年，或多或少都会与他们发生关联；人类有性别之分；
+1. 构成我们生活的现实，并且制约着我们的三个事实 
+   
+- 由于我们是在这个被称为“地球”的贫瘠星球上生活，因此，我们是无法脱离它的
+- 在地球上，我们并不是人类种族的唯一成员，与我们同在的还有其他人，我们在有生之年，或多或少都会与他们发生关联
+- 人类有性别之分
    
 
 2. “我们对他人的意义才是我们唯一的意义。”
@@ -22,7 +26,7 @@ tags:
 
 4. 当孩子意识到某件事受人关注时，他便不愿意再去克服了：德国一位杰出的社会学家发现，出生于法官、警察家庭的孩子，犯罪的可能性要高于普通家庭的孩子；父母是医生的儿童，患有神经病的概率也很大；传教士的孩子中很多都是问题少年；教师的子女很多都冥顽不灵。
    
-
+---
 5. 生活的乐趣主要是来自对未来的不确定。
    
 
@@ -46,5 +50,5 @@ tags:
 
 12. 世界上任何一种需要认真对待的工作或者生活，都不允许我们提前为自己准备好后路。
     
-
+---
 13. END这本书前半部分有挺多晦涩的名词和句子，不太容易理解，不适合速读。不过还好，没有《思考，快与慢》读起来那么吃力。整体来说，前面是论述，后面是陈述。
